# RustWebserver

./: Cargo.toml  Dockerfile  docker-compose.yml
kube/: server.yml
src/: handler.rs  main.rs  ws.rs
src/html/content/: index.html
src/html/errors/: 404.html
