[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.11"
warp = "0.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
futures = { version = "0.3.25", default-features = false }
uuid = { version = "1.2.2", features = ["serde", "v4"] }